48
================

04/10/23 PetRescue: Option to only send coordinator's email address
04/10/23 Bug fix for documents where flags is null #1329
02/10/23 Manual code check for new animals, make case insensitive
02/10/23 Fix bug with display of short codes on Home/Shelterview
02/10/23 lksize should still be non-editable for English speakers
02/10/23 Option to make not for adoption with more than X active reserves #1335
02/10/23 Option to remove home and work telephone numbers #1328
29/09/23 Reinstate mobile->home number check when adding new people
28/09/23 Fix fromJSON to not assign blanks in multi-select #1333
27/09/23 New flag wordkeys: AnimalFlagsEmblems/Only/X #1329
27/09/23 Browse smcom: show installed reports in list, remove select all #1332
26/09/23 Restrict new stock records to creating a max of 100 level records
25/09/23 Unified upload document template button for HTML or ODT #1315
25/09/23 Allow licence renew flag to be manually updated if no animal set #728
24/09/23 system log message refactoring to fix re bug
22/09/23 Automated emails for adopter followup, licence/clinic reminders #1322
21/09/23 Revert button for online form/report header/footer editing #1330
21/09/23 Fix for boarding shelter animals not appearing in location/unit mode
21/09/23 Add BondedMicrochips wordkey 
20/09/23 type hints, publisher package, main and cron #1320
20/09/23 adoptable_js: site dropdown/filter
19/09/23 type hints, publisher package upto homeagain #1320
19/09/23 type hints, paymentprocessor package #1320
19/09/23 type hints, dbms package #1320
19/09/23 type hints, waitinglist, wordprocessor #1320
19/09/23 Fix CC and BCC tokens in email templates for adoption checkout
18/09/23 Disable autolink plugin for document templates
18/09/23 type hints, users, utils #1320
18/09/23 type hints, service, sitedefs, smcom, stock, template #1320
18/09/23 type hints, onlineform, person, publish, reports, search #1320
18/09/23 Allow choice of day to send the weekly fosterer email #1191